<resources>
    <string name="app_name">PetLocator</string>
    <string name="inbox_text">View inbox</string>
    <string-array name="menu_options">
        <item>Home page</item>
        <item>Sign out</item>
    </string-array>
    <string-array name="results">
        <item>Fido</item>
        <item>Boots</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_sign_in">SignIn</string>
    <string name="title_activity_default_">Default_Activity</string>
    <string name="title_activity_sign__up">Sign_Up</string>
    <string name="title_activity_found_pets">FoundPetsActivity</string>
    <string name="title_activity_view_lost_report">ViewLostReport</string>
    <string name="title_activity_view_found_report">ViewFoundReport</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="title_activity_report_lost_pet">ReportLostPet</string>
    <string name="title_activity_nearby_pets">NearbyPets</string>
    <string name="alert_message">Hi Dog,\nSomeone found a pet that might be yours.
    Check out the summary below. Click for more details.</string>
    <string name="alert_summary">Species: Dog\nBreed: BG Retriever\nColor: Unknown\n</string>
    <string name="dog_name">Dog the Bounty Hunter</string>
    <string name="title_activity_my_reports">My Reports</string>
    <string name="title_activity_inbox">Inbox</string>
    <string-array name="animal_array">
        <item>Dog</item>
        <item>Cat</item>
        <item>Bird</item>
        <item>Cow</item>
        <item>Sheep</item>
        <item>Hamster</item>
        <item>Fish</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_log_in">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_repeat">Password confirmation</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
