<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<android.support.v4.widget.DrawerLayout-->
    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--android:id="@+id/drawer_layout"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent">-->

    <!--<RelativeLayout-->
        <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
        <!--xmlns:tools="http://schemas.android.com/tools"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--tools:context="petlocator.petlocator.MainActivity">-->

        <!--<android.support.v7.widget.Toolbar-->
            <!--android:id="@+id/action_bar"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="?attr/actionBarSize"-->
            <!--android:background="?attr/colorPrimary"-->
            <!--android:elevation="4dp"-->
            <!--android:theme="@style/ThemeOverlay.AppCompat.ActionBar"-->
            <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
            <!--android:text="Name*"-->
            <!--android:id="@+id/textView4"-->
            <!--android:layout_marginStart="57dp"-->
            <!--android:layout_marginTop="147dp"-->
            <!--android:layout_below="@+id/action_bar"-->
            <!--android:layout_alignParentStart="true" />-->

        <!--<EditText-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/editText3"-->
            <!--android:layout_below="@+id/textView4"-->
            <!--android:layout_alignStart="@+id/textView4" />-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
            <!--android:text="Email*"-->
            <!--android:id="@+id/textView5"-->
            <!--android:layout_below="@+id/editText3"-->
            <!--android:layout_alignStart="@+id/editText3" />-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
            <!--android:text="Password*"-->
            <!--android:id="@+id/textView7"-->
            <!--android:layout_below="@+id/editText4"-->
            <!--android:layout_alignStart="@+id/textView5" />-->

        <!--<EditText-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/editText4"-->
            <!--android:layout_below="@+id/textView5"-->
            <!--android:layout_alignStart="@+id/textView7" />-->

        <!--<EditText-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:inputType="textPassword"-->
            <!--android:ems="10"-->
            <!--android:id="@+id/editText5"-->
            <!--android:layout_below="@+id/textView7"-->
            <!--android:layout_alignStart="@+id/textView7" />-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
            <!--android:text="Password Confirmation*"-->
            <!--android:id="@+id/textView6"-->
            <!--android:layout_below="@+id/editText5"-->
            <!--android:layout_alignStart="@+id/editText5" />-->

        <!--<EditText-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:inputType="textPassword"-->
            <!--android:ems="10"-->
            <!--android:id="@+id/editText6"-->
            <!--android:layout_below="@+id/textView6"-->
            <!--android:layout_alignStart="@+id/textView6" />-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textAppearance="?android:attr/textAppearanceSmall"-->
            <!--android:text="*Required"-->
            <!--android:id="@+id/textView8"-->
            <!--android:layout_below="@+id/editText6"-->
            <!--android:layout_alignStart="@+id/editText6" />-->

        <!--<Button-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="Sign Up!"-->
            <!--android:id="@+id/sign_up_button"-->
            <!--android:layout_below="@+id/textView8"-->
            <!--android:layout_centerHorizontal="true" />-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
            <!--android:text="Sign Up"-->
            <!--android:id="@+id/textView9"-->
            <!--android:layout_below="@+id/action_bar"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_marginTop="50dp" />-->

        <!--<ImageView-->
            <!--android:layout_width="100dp"-->
            <!--android:layout_height="100dp"-->
            <!--android:id="@+id/imageView2"-->
            <!--android:src="@drawable/logo"-->
            <!--android:layout_alignBottom="@+id/textView4"-->
            <!--android:layout_alignStart="@+id/sign_up_button" />-->

    <!--</RelativeLayout>-->

    <!--<ListView android:id="@+id/left_drawer"-->
        <!--android:layout_width="240dp"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_gravity="start"-->
        <!--android:choiceMode="singleChoice"-->
        <!--android:divider="@android:color/transparent"-->
        <!--android:dividerHeight="0dp"-->
        <!--android:background="#111"/>-->
<!--</android.support.v4.widget.DrawerLayout>-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/LightNoActionBar.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/action_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/LightNoActionBar.PopupOverlay">
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_below="@id/appbar"
        tools:context="petlocator.petlocator.SignUp">

        <!-- Name input -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <AutoCompleteTextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_name"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <!-- Username input -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <AutoCompleteTextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_username"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <!-- Email input -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password input -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password repeat input -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password_repeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password_repeat"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/sign_up_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_sign_up"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>