<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<android.support.v4.widget.DrawerLayout-->
    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--android:id="@+id/drawer_layout"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--tools:context="petlocator.petlocator.SignIn">-->

    <!--<RelativeLayout-->
        <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
        <!--xmlns:tools="http://schemas.android.com/tools"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--tools:context="petlocator.petlocator.MainActivity">-->

        <!--<android.support.v7.widget.Toolbar-->
            <!--android:id="@+id/action_bar"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="?attr/actionBarSize"-->
            <!--android:background="?attr/colorPrimary"-->
            <!--android:elevation="4dp"-->
            <!--android:theme="@style/ThemeOverlay.AppCompat.ActionBar"-->
            <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
            <!--android:text="Username"-->
            <!--android:id="@+id/textView"-->
            <!--android:layout_below="@+id/textView3"-->
            <!--android:layout_alignEnd="@+id/textView2"-->
            <!--android:layout_marginTop="98dp" />-->

        <!--<Button-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="Sign In"-->
            <!--android:id="@+id/sign_in_button"-->
            <!--android:layout_below="@+id/editText2"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_marginTop="38dp" />-->

        <!--<EditText-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:inputType="textPersonName"-->
            <!--android:ems="10"-->
            <!--android:id="@+id/editText"-->
            <!--android:clickable="true"-->
            <!--android:layout_below="@+id/textView"-->
            <!--android:layout_centerHorizontal="true" />-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
            <!--android:text="Password"-->
            <!--android:id="@+id/textView2"-->
            <!--android:layout_below="@+id/editText"-->
            <!--android:layout_toStartOf="@+id/sign_in_button"-->
            <!--android:layout_marginTop="38dp" />-->

        <!--<EditText-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:inputType="textPassword"-->
            <!--android:ems="10"-->
            <!--android:id="@+id/editText2"-->
            <!--android:layout_below="@+id/textView2"-->
            <!--android:layout_alignStart="@+id/editText" />-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
            <!--android:text="Pet Locator"-->
            <!--android:id="@+id/textView3"-->
            <!--android:layout_marginTop="58dp"-->
            <!--android:layout_below="@+id/action_bar"-->
            <!--android:layout_toEndOf="@+id/textView" />-->

        <!--<ImageView-->
            <!--android:layout_width="100dp"-->
            <!--android:layout_height="100dp"-->
            <!--android:id="@+id/imageView"-->
            <!--android:src="@drawable/logo"-->
            <!--android:layout_below="@+id/textView3"-->
            <!--android:layout_alignEnd="@+id/textView3" />-->

    <!--</RelativeLayout>-->

    <!--<ListView android:id="@+id/left_drawer"-->
        <!--android:layout_width="240dp"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_gravity="start"-->
        <!--android:choiceMode="singleChoice"-->
        <!--android:divider="@android:color/transparent"-->
        <!--android:dividerHeight="0dp"-->
        <!--android:background="#111"/>-->


<!--</android.support.v4.widget.DrawerLayout>-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/LightNoActionBar.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/action_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/LightNoActionBar.PopupOverlay">
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_below="@id/appbar"
        tools:context="petlocator.petlocator.SignIn">

        <!-- Username input -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_username"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <!-- Password input -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_sign_in_short"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sign_up_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_sign_up"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>
